[package]
name = "signet-libmdbx"
description = "Idiomatic and safe MDBX wrapper"
version = "0.0.1"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/init4tech/mdbx"
repository = "https://github.com/init4tech/mdbx"


[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = true
panic = "unwind"
codegen-units = 16

[profile.profiling]
inherits = "release"
debug = 2
strip = false

[profile.bench]
inherits = "profiling"

[profile.ci-rust]
inherits = "dev"
strip = true
debug = false
incremental = false

[dependencies]
signet-mdbx-sys= { version = "0.0.1", path = "mdbx-sys" }

bitflags = "2.10.0"
byteorder = "1.5.0"
parking_lot = "0.12.5"
smallvec = "1.15.1"
thiserror = "2.0.18"
tracing = "0.1.44"

dashmap = { version = "6.1.0", features = ["inline"], optional = true }

[features]
default = []
return-borrowed = []
read-tx-timeouts = ["dep:dashmap"]

[dev-dependencies]
criterion = "0.8.1"
rand = "0.9.2"
tempfile = "3.20.0"

[[bench]]
name = "cursor"
harness = false

[[bench]]
name = "transaction"
harness = false
