[package]
name = "signet-mdbx-sys"
description = "Raw bindings for libmdbx"
version = "0.0.1"
edition = "2024"
rust-version = "1.92"
license = "Apache-2.0"
homepage = "https://github.com/init4tech/signet-mdbx"
repository = "https://github.com/init4tech/signet-mdbx"

[features]
default = []
bindgen = ["dep:bindgen"]

[build-dependencies]
cc = "1.2.15"
bindgen = { version = "0.72", default-features = false, optional = true }
