[package]
name = "signet-mdbx-sys"
description = "Raw bindings for libmdbx"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "Apache-2.0"
homepage = "https://github.com/init4tech/signet-mdbx"
repository = "https://github.com/init4tech/signet-mdbx"

[build-dependencies]
cc = "1.2.15"
